--- a/app/src/main/res/layouts/FragmentLayout/layout/fragment_profile.xml
+++ b/app/src/main/res/layouts/FragmentLayout/layout/fragment_profile.xml
@@ -72,19 +72,6 @@
 
             </LinearLayout>
 
-            <!--<ImageView-->
-                <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-                <!--android:id="@+id/profile_image"-->
-                <!--android:layout_width="100dp"-->
-                <!--android:layout_height="100dp"-->
-                <!--android:layout_alignParentTop="true"-->
-                <!--android:layout_centerHorizontal="true"-->
-                <!--android:layout_centerVertical="true"-->
-                <!--android:layout_gravity="center_horizontal"-->
-                <!--android:layout_marginTop="120dp"-->
-                <!--android:clickable="true"-->
-                <!--android:foreground="?android:attr/selectableItemBackground"-->
-                <!--android:background="@drawable/add_user"/>-->
         <de.hdodenhof.circleimageview.CircleImageView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/profile_image"
@@ -285,7 +272,8 @@
                         android:layout_weight="1"
                         android:background="@drawable/button_border_red"
                         android:clickable="true"
-                        android:foreground="?android:attr/selectableItemBackground" />
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:textAllCaps="false"/>
                     <Button
                         android:id="@+id/birthday"
                         android:layout_width="@dimen/button_border_width"
@@ -296,7 +284,8 @@
                         android:background="@drawable/button_border_green"
                         android:layout_weight="1"
                         android:clickable="true"
-                        android:foreground="?android:attr/selectableItemBackground"/>
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:textAllCaps="false"/>
 
                 </LinearLayout>
 
@@ -319,7 +308,8 @@
                         android:background="@drawable/button_border_brown"
                         android:layout_weight="1"
                         android:clickable="true"
-                        android:foreground="?android:attr/selectableItemBackground"/>
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:textAllCaps="false"/>
                     <Button
                         android:id="@+id/height"
                         android:layout_width="@dimen/button_border_width"
@@ -330,7 +320,8 @@
                         android:background="@drawable/button_border_blue"
                         android:layout_weight="1"
                         android:clickable="true"
-                        android:foreground="?android:attr/selectableItemBackground"/>
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:textAllCaps="false"/>
 
                 </LinearLayout>
 
@@ -462,6 +453,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/user_friends"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="50"
