--- a/app/src/main/res/layouts/ActivityLayout/layout/activity_video.xml
+++ b/app/src/main/res/layouts/ActivityLayout/layout/activity_video.xml
@@ -39,7 +39,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:background="@drawable/transparent_border"
-            android:text="GİRİŞ YAP"
+            android:text="@string/login_button"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/transparent_border"
-            android:text="ÜYE OL"
+            android:text="@string/signup_button"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/videoView"
             app:layout_constraintEnd_toEndOf="parent"
