--- a/app/src/main/res/layouts/CardViews/layout/item_list_friends.xml
+++ b/app/src/main/res/layouts/CardViews/layout/item_list_friends.xml
@@ -49,8 +49,8 @@
         <ImageView
             android:layout_gravity="center_vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_phone"/>
+            android:layout_height="wrap_content"/>
+            <!--android:src="@drawable/ic_phone"-->
 
 
     </LinearLayout>
